MyDemoOrg/force-app/main/default/objects/Order__c/Order__c.object-meta.xml
<CustomObject>
    <description>This object is created for the integration between Salesforce and Wordpress.</description>
    <label>Order</label>
    <nameField>
        <label>id</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Orders</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>