MyDemoOrg/force-app/main/default/objects/Order__c/fields/completed_at__c.field-meta.xml
<CustomField>
    <fullName>completed_at__c</fullName>
    <label>completed at</label>
    <type>DateTime</type>
</CustomField>