MyDemoOrg/force-app/main/default/objects/Order__c/fields/created_at__c.field-meta.xml
<CustomField>
    <fullName>created_at__c</fullName>
    <label>created at</label>
    <type>DateTime</type>
</CustomField>