MyDemoOrg/force-app/main/default/objects/Order__c/fields/customer_id__c.field-meta.xml
<CustomField>
    <fullName>customer_id__c</fullName>
    <label>customer id</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>