MyDemoOrg/force-app/main/default/objects/Order__c/fields/customer_ip__c.field-meta.xml
<CustomField>
    <fullName>customer_ip__c</fullName>
    <label>customer ip</label>
    <length>16</length>
    <type>Text</type>
</CustomField>