MyDemoOrg/force-app/main/default/objects/Order__c/fields/customer_user_agent__c.field-meta.xml
<CustomField>
    <fullName>customer_user_agent__c</fullName>
    <label>customer user agent</label>
    <length>18</length>
    <type>Text</type>
</CustomField>