MyDemoOrg/force-app/main/default/objects/Order__c/fields/is_vat_exempt__c.field-meta.xml
<CustomField>
    <fullName>is_vat_exempt__c</fullName>
    <defaultValue>false</defaultValue>
    <label>is vat exempt</label>
    <type>Checkbox</type>
</CustomField>