MyDemoOrg/force-app/main/default/objects/Order__c/fields/note__c.field-meta.xml
<CustomField>
    <fullName>note__c</fullName>
    <label>note</label>
    <type>TextArea</type>
</CustomField>