MyDemoOrg/force-app/main/default/objects/Order__c/fields/order_key__c.field-meta.xml
<CustomField>
    <fullName>order_key__c</fullName>
    <label>order key</label>
    <length>20</length>
    <type>Text</type>
</CustomField>