MyDemoOrg/force-app/main/default/objects/Order__c/fields/shipping_methods__c.field-meta.xml
<CustomField>
    <fullName>shipping_methods__c</fullName>
    <label>shipping methods</label>
    <length>18</length>
    <type>Text</type>
</CustomField>