MyDemoOrg/force-app/main/default/objects/Order__c/fields/subtotal__c.field-meta.xml
<CustomField>
    <fullName>subtotal__c</fullName>
    <label>subtotal</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>