MyDemoOrg/force-app/main/default/objects/Order__c/fields/total__c.field-meta.xml
<CustomField>
    <fullName>total__c</fullName>
    <label>total</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>