MyDemoOrg/force-app/main/default/objects/Order__c/fields/total_line_items_quantity__c.field-meta.xml
<CustomField>
    <fullName>total_line_items_quantity__c</fullName>
    <label>total line items quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>