MyDemoOrg/force-app/main/default/objects/Order__c/fields/total_shipping__c.field-meta.xml
<CustomField>
    <fullName>total_shipping__c</fullName>
    <label>total shipping</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>