MyDemoOrg/force-app/main/default/objects/Order__c/fields/total_tax__c.field-meta.xml
<CustomField>
    <fullName>total_tax__c</fullName>
    <label>total tax</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>