MyDemoOrg/force-app/main/default/objects/Order__c/fields/updated_at__c.field-meta.xml
<CustomField>
    <fullName>updated_at__c</fullName>
    <label>updated at</label>
    <type>DateTime</type>
</CustomField>