MyDemoOrg/force-app/main/default/objects/Order__c/fields/view_order_url__c.field-meta.xml
<CustomField>
    <fullName>view_order_url__c</fullName>
    <label>view order url</label>
    <type>Url</type>
</CustomField>